# MangaTranslationPipeline

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  停止漫画翻译流水线.command  启动漫画翻译流水线.command  首次安装.command
.github/workflows/: tests.yml
manga_pipeline/: __init__.py  config.py  db.py  engine.py  main.py  providers.py  schemas.py  secret_store.py  tasks.py
scripts/: check_environment.py  download_models.py
static/: app.js  index.html  styles.css
tests/: test_config.py  test_db.py  test_engine.py  test_main.py  test_providers.py  test_tasks.py
